# OtterCMS

./: .electronignore  .env  .gitignore  .npmrc  README.md  build.ps1  electron-builder-optimized.json  electron-builder.json  forge.config.js  forge.config.mjs  main.js  package-lock.json  package-lock.json.back  package.json  preload.js  todo.md  vite.config.js  vite.config.optimized.js  vite.main.config.ts  vite.preload.config.ts
.github/workflows/: build.yml
config/: app-config.json
db/: ottercms.sqlite
doc/: audit-composants.md  migration-complete.md  variables-migration.md
docs/: css-audit-report.md  developpement.md  doc_datta.md  exemples-bd-rpc.md  guide-administration.md  guide-utilisation.md  migration-mapping.md  navigation.graphml  style-guide-datta.md  themes.md
docs/datta-able-bootstrap-dashboard-master/: package-lock.json  package.json
rn-uwp/: App.tsx  README.md  app.json  package.json  tsconfig.json
rn-uwp/src/: api.ts
scripts/: analyze-app-advanced.js  analyze-app.js  build-app-improved-upx.ps1  build-app-improved.ps1  build-app.ps1  build-forge.ps1  build-optimized.js  build-simple.ps1  build-tauri.ps1  build-ultra-optimized.js  build-ultra-optimized.ps1  build.ps1  check-icon.ps1  check-native-modules.js  cleanup-dependencies-ultra.js  cleanup-dependencies.js  compress-with-upx.ps1  copy-datta-assets.ps1  download-oracledb-binary.ps1  electron-diagnostic.ps1  install-libsql.js  install.js  optimize-assets-advanced.js  optimize-assets.js  performance-check.js  rebuild-and-build.js  robust-postinstall.js  sendemail-validate  setup-tauri-tools.ps1  setup-tools.ps1  size-analysis.ps1  test-native-modules.js  upx-compress-advanced.js  validate-build-advanced.js  validate-build.js  verify-build.js
src/: App.jsx  index.html  main.js  main.ts  preload.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: main.rs
src-tauri/src/commands/: auth.rs  config.rs  diagnostics.rs  mod.rs  oracle.rs  roles.rs  sync.rs
src-tauri/src/database/: connection.rs  mod.rs  retry.rs
src-tauri/src/database/models/: role.rs  user.rs
src/agent/: __init__.py  adaptive_execution.py  competitor_detector.py  liquidity_hunter.py  meta_coordinator.py  order_flow_analyzer.py
src/assets/: installer.nsh
src/components/: AdminCategories.jsx  AdminRoles.jsx  AdminTemplate.jsx  AdminUsers.jsx  Auth.jsx  Dashboard.jsx  DatabaseTest.tsx  ImportData.jsx  IndividuFiche.jsx  IndividuFicheModernExtended.jsx  IndividusList.jsx  MainContent.jsx  MassAttribution.jsx  NouvelIndividu.jsx  UserManagement.tsx
src/constants/: permissions.js
src/contexts/: AuthContext.tsx
src/preload/: index.js
src/renderer/: App.jsx  index.html  main.jsx  (+1 more)
utils/: inferType.js  logger.js
(+127 files in other folders)
