[package]
name = "ottercms"
version = "2.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2", features = ["wry"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
libsql = { version = "0.6" }
sysinfo = "0.29"

r2d2 = { version = "0.8", optional = true }
r2d2_sqlite = { version = "0.24", optional = true }
rusqlite = { version = "0.32", features = ["bundled", "backup", "blob", "chrono", "serde_json"], optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase"] }

[features]
default = ["use-libsql"]
use-libsql = []
use-rusqlite = ["r2d2", "r2d2_sqlite", "rusqlite"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
